[package]
name = "expander-rs"
version = "0.4.0"
authors = ["Gokberk Kocak"]
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
# cheap hashes for like vec<u8>
fnv = "1.0"
# cheap alloc
# heap security can be disabled since it's an internal program.
mimalloc = { version = "0.1", default-features = false, optional = true }
# bitvec crate for efficient bitvec memory representation
bitvec = "0.22"


[features]
cheap-alloc = ["mimalloc"]