[package]
name = "expander-rs"
version = "0.6.0"
authors = ["Gokberk Kocak"]
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# for box dyn serialize
erased-serde = "0.3"
structopt = "0.3"
# cheap hash for like vec<u8>
fnv = "1.0"
# very cheap hash for very small stuff like bytes.
fxhash = "0.2"
# aes hashing
ahash = "0.7"
# mimalloc - heap security can be disabled since it's an internal program.
mimalloc = { version = "0.1", default-features = false, optional = true }
# bitvec crate for efficient bitvec memory representation
bitvec = "0.22"

[features]
mim-alloc = ["mimalloc"]

[profile.production]
inherits = "release"
codegen-units=1
lto = true